--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.2
+Date: 10.08.2021
+  Changes:
+    - Added thumbnail.png
+---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 10.08.2021
   Changes:
