Auto Correction for Aircraft/Seablock - Gunship rifle back to submachine-gun

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.4
+Date: 12.27.2021
+  Changes:
+    - Auto Correction for Aircraft/Seablock - Gunship rifle back to submachine-gun
+---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: 10.21.2021
   Changes:
